--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
 ##The website title
-name: Blog Name
+name: Lingyan Yin
 ##Markdown processor
 markdown: kramdown
 ##syntax highlighter. change it to pygments
 highlighter: pygments
 
 ##define base_url for valid usage in sitemap.xml and robots.txt
-base_url: http://example.com
+base_url: https://LingyanYin.github.io
 sass:
   sass_dir: _sass
   style: :compressed
 paginate: 5
 paginate_path: "page:num"
 ##The website description (to be used in meta tags)
-description: Put website description for your home page. (about 50 words or more)
+description: Welcome to my blog world!
 ##Some frequently used keywords on your website
-keywords: some, relevant, keywords, for, usage, in metatags
+keywords: C, C++ 
 
 ##define this for disqus comment support
 #disqus: forumname
@@ -25,13 +25,15 @@ keywords: some, relevant, keywords, for, usage, in metatags
 #ga_domain: analyticsDomain
 
 ##Some commonly used links
-links:
-  facebook: username
-  twitter: username
-  email: username@gmail.com
-  github: username
+#links:
+#  facebook: username
+#  twitter: username
+#  email: xxx@gmail.com
+#  github: LingyanYin@github.com
 
 ##put desired image in img/ directory and set the value accordingly. If not defined, a placeholder image will be used.
-about_image: placeholder.jpg
+#about_image: placeholder.jpg
 ##comment this if you want full width posts with no sidebar
-sidebar: on
+#sidebar: on
+
+plugins: [jekyll-paginate]
